abreviação do escritório no título

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <head>
-    <title>Provisionamento</title>
+    <title>Provisionamento LCA</title>
     <link rel="shortcut icon" href="favicon.png" type="image/x-icon" />
 
     <meta charset="utf-8" />
