Alterações no style - container; espaçamentos

--- a/pages/primeiro.html
+++ b/pages/primeiro.html
@@ -1,12 +1,12 @@
-<div id="calculus-container">
+<div class="/">
   <img id="logo" src="../indice.png" />
   <div>
   <label for="grau_processual">1º Grau</label><hr>
    <br /><br /><br/>
 
   <div>
-    <label>Digite o valor da probabilidade de perda</label>
-    <input autofocus class="valor01" type="text" name="valor" id="valor01" placeholder="R$" >
+    <label>Valor da probabilidade de perda:</label><br><br><br>
+    <input autofocus class="valor01" type="number" name="valor" id="valor01" placeholder="R$" >&nbsp
     <button onClick="firstDegree()" class="button ok" id="fist-degree-button">&#10004;</button>
   </div>
     
