--- a/pages/segundo.html
+++ b/pages/segundo.html
@@ -1,27 +1,28 @@
-<div id="calculus-container">
+
+<div class="/">
   <img id="logo" src="../indice.png" />
   <div>
-    <label for="grau_processual">2º Grau</label><hr>
-    <br/><br /><br/>
+  <label for="grau_processual">2º Grau</label><hr>
+   <br>
 
-    
     <div>
-      <label>Digite o valor da Perda Efetiva</label>
+      <label>Valor da Perda Efetiva:</label>
       <input autofocus class="valor01" type="number" name="valor" id="valor01" placeholder="R$" >
     </div><br>
 
     <div>
-      <label>Digite o valor do Contador da Vara</label>
+      <label>Valor do Contador da Vara:</label><br>
       <input autofocus class="valor01" type="number" name="valor" id="valor02" placeholder="R$" >
     </div><br>
 
     <div>
-      <label>Digite o valor do Contador da Claro S.A</label>
+      <label>Valor do Contador da Claro:</label><br>
       <input autofocus class="valor01" type="number" name="valor" id="valor03" placeholder="R$" >
     </div><br>
+  
     <button onClick="secondDegree()" class="button ok" id="fist-button">&#10004;</button>
 
-  </div>
+  
 </div>
 
 <div id="backhome">
